xml issuer sign: added a temporary main() to FacturaXmlTest to achieve the signing of xml doc